--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -27,4 +27,5 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 
